Clean up Arrays.asList() calls to List.of() factory calls