@@ -83,7 +83,7 @@ public class GroupCR extends AnyCR {
         }
 
         public Builder typeExtensions(final TypeExtensionTO... typeExtensions) {
-            getInstance().getTypeExtensions().addAll(Arrays.asList(typeExtensions));
+            getInstance().getTypeExtensions().addAll(List.of(typeExtensions));
             return this;
         }
 
