@@ -80,7 +80,7 @@ public class SyncopeOpenApiCustomizer extends OpenApiCustomizer {
                         try {
                             javaDocProvider = new JavaDocProvider(javaDocPaths);
                         } catch (Exception e) {
-                            LOG.error("Could not set javadoc paths from {}", Arrays.asList(javaDocPaths), e);
+                            LOG.error("Could not set javadoc paths from {}", List.of(javaDocPaths), e);
                         }
                     }
                 } else {
