@@ -137,7 +137,7 @@ public class RoleTest extends AbstractTest {
         List<String> members = roleDAO.findDynMembers(actual);
         assertEquals(2, members.size());
         assertEquals(
-                new HashSet<>(Arrays.asList("c9b2dec2-00a7-4855-97c0-d854842b4b24", newUserKey)),
+                new HashSet<>(List.of("c9b2dec2-00a7-4855-97c0-d854842b4b24", newUserKey)),
                 new HashSet<>(members));
 
         user = userDAO.find("c9b2dec2-00a7-4855-97c0-d854842b4b24");
